2 kis intro code upload

--- a/kis-intro.ipynb
+++ b/kis-intro.ipynb
@@ -49,16 +49,14 @@
     "lines = api_text.readlines()\n",
     "\n",
     "# 필요한 정보를 불러옴\n",
-    "api_key = lines[0].strip()\n",
-    "secret_key = lines[1].strip()\n",
-    "acc_no = lines[2].strip()\n",
+    "# TODO: 필요한 정보 가져오기\n",
     "api_text.close()\n",
     "\n",
     "broker = mojito.KoreaInvestment(\n",
-    "    api_key=api_key,\n",
-    "    api_secret=secret_key,\n",
-    "    acc_no=acc_no, # 계좌번호 - 가 꼭 있어야함! (ex: 12341234-01)\n",
-    "    mock=False # 모의 투자 계좌 사용 여부\n",
+    "    api_key= , \n",
+    "    api_secret= ,\n",
+    "    acc_no= , # 계좌번호 - 가 꼭 있어야함! (ex: 12341234-01)\n",
+    "    mock=  # 모의 투자 계좌 사용 여부\n",
     ")\n",
     "\n",
     "print(broker) # 증권사 객체 출력"
@@ -375,7 +373,8 @@
    ],
    "source": [
     "# 관심있는 종목 코드 출력\n",
-    "symbols[symbols['한글명'].str.contains('삼성')] # 삼성 계열사"
+    "\n",
+    "# TODO: print stocks related to 삼성 계열사"
    ]
   },
   {
@@ -449,7 +448,7 @@
     }
    ],
    "source": [
-    "symbols[symbols['한글명'].str.contains('삼성전자')] #"
+    "# TODO: 삼성전자 종목 코드 가져오기"
    ]
   },
   {
@@ -590,7 +589,7 @@
     }
    ],
    "source": [
-    "symbols[symbols['그룹코드'] == 'ST'] # 주권만 출력"
+    "# TODO: 주권 종목만 가져오기"
    ]
   },
   {
@@ -813,7 +812,7 @@
    ],
    "source": [
     "# kospi\n",
-    "kospi = broker.fetch_kospi_symbols()\n",
+    "# TODO: 코스피 종목 가져오기\n",
     "kospi.head()"
    ]
   },
@@ -1024,7 +1023,7 @@
    ],
    "source": [
     "# kosdaq\n",
-    "kosdaq = broker.fetch_kosdaq_symbols()\n",
+    "# TODO: 코스닥 종목 가져오기\n",
     "kosdaq.head()"
    ]
   },
@@ -1056,7 +1055,7 @@
     }
    ],
    "source": [
-    "samsung = broker.fetch_price('005930') # 삼성전자 종목 정보 가져오기\n",
+    "samsung =  # TODO: 삼성전자 종목 정보 가져오기\n",
     "print(samsung) # 종목 정보 출력"
    ]
   },
@@ -1082,8 +1081,7 @@
     "codes = ['005930', '000660', '035420', '051910', '207940'] # 삼성전자, SK하이닉스, 네이버, LG화학, 삼성바이오로직스\n",
     "\n",
     "for code in codes:\n",
-    "    stock = broker.fetch_price(code)\n",
-    "    print(stock)"
+    "    pass # TODO: 종목 정보 출력"
    ]
   },
   {
@@ -1106,12 +1104,12 @@
    "source": [
     "# 내가 보고 싶은 내용만 뽑아오기\n",
     "\n",
-    "# 시가, 고가, 저가, 종가, 거래량, 거래대금\n",
-    "print(\"주식 시가 :     \", samsung['output']['stck_oprc'])       # 주식시가\n",
-    "print(\"주식최고가 :     \", samsung['output']['stck_hgpr'])       # 주식최고가\n",
-    "print(\"주식최저가 :     \", samsung['output']['stck_lwpr'])       # 주식최저가\n",
-    "print(\"주식 현재가 :    \", samsung['output']['stck_prpr'])       # 주식 현재가\n",
-    "print(\"전일 대비율 :    \", samsung['output']['prdy_ctrt'])       # 전일 대비율"
+    "# 시가, 고가, 저가, 종가, 거래량, 거래대금 (API 참고)\n",
+    "print(\"주식 시가 :     \", )       # 주식시가\n",
+    "print(\"주식최고가 :     \", )       # 주식최고가\n",
+    "print(\"주식최저가 :     \", )       # 주식최저가\n",
+    "print(\"주식 현재가 :    \", )       # 주식 현재가\n",
+    "print(\"전일 대비율 :    \", )       # 전일 대비율"
    ]
   },
   {
