kis intro full code

--- a/kis-intro.ipynb
+++ b/kis-intro.ipynb
@@ -449,7 +449,7 @@
     }
    ],
    "source": [
-    "symbols[symbols['한글명'].str.contains('삼성전자')] #"
+    "symbols[symbols['한글명'].str.contains('삼성전자')] # 삼성전자 종목코드 조회"
    ]
   },
   {
