skeleton: kis korea finished upto orders, cancellations, modification

--- a/kis-korea.ipynb
+++ b/kis-korea.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "balance = broker.fetch_balance()\n",
+    "balance = #TODO\n",
     "print(balance) # 계정에 정보를 가져옴"
    ]
   },
@@ -86,12 +86,8 @@
    "source": [
     "# 계좌에 있는 종목들을 가져와서 출력\n",
     "for comp in balance['output1']:\n",
-    "    print(comp['pdno'])         # 종목번호\n",
-    "    print(comp['prdt_name'])    # 종목명\n",
-    "    print(comp['hldg_qty'])     # 보유수량\n",
-    "    print(comp['pchs_amt'])     # 매입금액\n",
-    "    print(comp['evlu_amt'])     # 평가금액\n",
-    "    print(\"-\" * 40)"
+    "    #TODO: print 종목번호, 종목명, 보유수량, 매입금액, 평가금액\n",
+    "    pass"
    ]
   },
   {
@@ -139,9 +135,7 @@
    ],
    "source": [
     "limit_buy_order = broker.create_limit_buy_order(\n",
-    "    symbol='005930', # 종목번호\n",
-    "    price=50000, # 주문가격\n",
-    "    quantity=1 # 주문수량\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(limit_buy_order) # 주문 결과를 출력\n",
@@ -190,8 +184,7 @@
    ],
    "source": [
     "market_buy_order = broker.create_market_buy_order(\n",
-    "    symbol='005930', # 종목번호\n",
-    "    quantity=1 # 주문수량\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(market_buy_order) # 주문 결과를 출력\n",
@@ -252,9 +245,7 @@
    ],
    "source": [
     "limit_sell_order = broker.create_limit_sell_order(\n",
-    "    symbol='005930', # 종목번호\n",
-    "    price=60000, # 주문가격\n",
-    "    quantity=1 # 주문수량\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(limit_sell_order) # 주문 결과를 출력\n",
@@ -303,8 +294,7 @@
    ],
    "source": [
     "market_sell_order = broker.create_market_sell_order(\n",
-    "    symbol='005930', # 종목번호\n",
-    "    quantity=4 # 주문수량\n",
+    "   #TODO: implement\n",
     ")\n",
     "\n",
     "print(market_sell_order)\n",
@@ -342,7 +332,26 @@
     "  - order_type (str): 주문구분\n",
     "  - price (int): 가격\n",
     "- Returns:\n",
-    "  - dict"
+    "  - dict\n",
+    "\n",
+    "참고: 주문구분 코드 (apidml 04. 국내주식주문 > 05. 주문 정정에 자세히 나와있음)\n",
+    "- 00 : 지정가\n",
+    "- 01 : 시장가\n",
+    "- 02 : 조건부지정가\n",
+    "- 03 : 최유리지정가\n",
+    "- 04 : 최우선지정가\n",
+    "- 05 : 장전 시간외\n",
+    "- 06 : 장후 시간외\n",
+    "- 07 : 시간외 단일가\n",
+    "- 08 : 자기주식\n",
+    "- 09 : 자기주식S-Option\n",
+    "- 10 : 자기주식금전신탁\n",
+    "- 11 : IOC지정가 (즉시체결,잔량취소)\n",
+    "- 12 : FOK지정가 (즉시체결,전량취소)\n",
+    "- 13 : IOC시장가 (즉시체결,잔량취소)\n",
+    "- 14 : FOK시장가 (즉시체결,전량취소)\n",
+    "- 15 : IOC최유리 (즉시체결,잔량취소)\n",
+    "- 16 : FOK최유리 (즉시체결,전량취소)"
    ]
   },
   {
@@ -362,10 +371,7 @@
     "# 주문에 대한 전체 주문수량 취소\n",
     "\n",
     "tot_cancel_order = broker.cancel_order(\n",
-    "    org_no=\"91252\", \n",
-    "    order_no=\"0000050816\", # 주문을 넣었을때 받은 ['output']['ODNO'] 값\n",
-    "    quantity=4,  # 잔량전부 취소시 원주문 수량과 일치해야함\n",
-    "    total=True   # 잔량전부를 의미\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(tot_cancel_order) # 주문 결과를 \n",
@@ -395,10 +401,7 @@
     "# 주문에 대한 일부 주문수량 취소\n",
     "\n",
     "partial_cancel_order = broker.cancel_order(\n",
-    "    org_no=\"91252\", # 주문읋 넣었을때 받은 ['output']['ODNO'] 값\n",
-    "    order_no=\"0000050816\",\n",
-    "    quantity=1,  # 취소할 주문 수량\n",
-    "    total=False   # 일부 취소를 의미\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(partial_cancel_order) # 주문 결과를 출력"
@@ -448,12 +451,7 @@
     "# 전체 수량 정정\n",
     "\n",
     "tot_modify_order = broker.modify_order(\n",
-    "    org_no=\"91252\",\n",
-    "    order_no=\"0000138450\",\n",
-    "    order_type=\"00\",\n",
-    "    price=60000,\n",
-    "    quantity=4, # 전체 수량이랑 일치해야함\n",
-    "    total=True\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(tot_modify_order) # 주문 결과를 출력"
@@ -476,12 +474,7 @@
     "# 일부 수량 정정\n",
     "\n",
     "partial_modify_order = broker.modify_order(\n",
-    "    org_no=\"91252\",\n",
-    "    order_no=\"0000138450\",\n",
-    "    order_type=\"00\",\n",
-    "    price=60000,\n",
-    "    quantity=2, # 일부 수량\n",
-    "    total=False\n",
+    "    #TODO: implement\n",
     ")\n",
     "\n",
     "print(partial_modify_order) # 주문 결과를 출력"
