kis korea finished upto orders, cancellations, modification

--- a/kis-korea.ipynb
+++ b/kis-korea.ipynb
@@ -342,7 +342,26 @@
     "  - order_type (str): 주문구분\n",
     "  - price (int): 가격\n",
     "- Returns:\n",
-    "  - dict"
+    "  - dict\n",
+    "\n",
+    "참고: 주문구분 코드 (apidml 04. 국내주식주문 > 05. 주문 정정에 자세히 나와있음)\n",
+    "- 00 : 지정가\n",
+    "- 01 : 시장가\n",
+    "- 02 : 조건부지정가\n",
+    "- 03 : 최유리지정가\n",
+    "- 04 : 최우선지정가\n",
+    "- 05 : 장전 시간외\n",
+    "- 06 : 장후 시간외\n",
+    "- 07 : 시간외 단일가\n",
+    "- 08 : 자기주식\n",
+    "- 09 : 자기주식S-Option\n",
+    "- 10 : 자기주식금전신탁\n",
+    "- 11 : IOC지정가 (즉시체결,잔량취소)\n",
+    "- 12 : FOK지정가 (즉시체결,전량취소)\n",
+    "- 13 : IOC시장가 (즉시체결,잔량취소)\n",
+    "- 14 : FOK시장가 (즉시체결,전량취소)\n",
+    "- 15 : IOC최유리 (즉시체결,잔량취소)\n",
+    "- 16 : FOK최유리 (즉시체결,전량취소)"
    ]
   },
   {
