intro full code

--- a/kis-intro.ipynb
+++ b/kis-intro.ipynb
@@ -31,21 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mojito.koreainvestment.KoreaInvestment object at 0x11fb767f0>\n"
+      "<mojito.koreainvestment.KoreaInvestment object at 0x1060a1850>\n"
      ]
     }
    ],
    "source": [
     "import mojito\n",
     "\n",
-    "api_text = open('./kis_keys.txt', 'r')\n",
+    "api_text = open('./kis-keys.txt', 'r')\n",
     "lines = api_text.readlines()\n",
     "\n",
     "# 필요한 정보를 불러옴\n",
