added daily changes

--- a/kis-korea.ipynb
+++ b/kis-korea.ipynb
@@ -651,6 +651,90 @@
     "\n",
     "day_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 당일 분봉 데이터 조회\n",
+    "- 모의투자에서는 당일 분봉 데이터 조회가 불가능함\n",
+    "- 실전투자 api 사용해야함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mojito.koreainvestment.KoreaInvestment object at 0x12e2cf760>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mojito\n",
+    "\n",
+    "api_text = open('./kis-keys.txt', 'r')\n",
+    "lines = api_text.readlines()\n",
+    "\n",
+    "# read api_key, secret_key, account number from the file\n",
+    "api_key = lines[0].strip()\n",
+    "secret_key = lines[1].strip()\n",
+    "acc_no = lines[2].strip()\n",
+    "api_text.close()\n",
+    "\n",
+    "real_broker = mojito.KoreaInvestment(\n",
+    "    api_key=api_key,\n",
+    "    api_secret=secret_key,\n",
+    "    acc_no=acc_no, # 계좌번호 - 가 꼭 있어야함! (ex: 12341234-01)\n",
+    "    mock=True # 이번에는 모의투자로 진행!!\n",
+    ")\n",
+    "\n",
+    "print(real_broker) # valid for 24 hours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      open   high    low  close   volume\n",
+      "datetime                                                \n",
+      "2024-07-18 09:01:00  84300  84600  84200  84300   335485\n",
+      "2024-07-18 09:02:00  84300  84400  84100  84200   355416\n",
+      "2024-07-18 09:03:00  84200  84400  84000  84300   317339\n",
+      "2024-07-18 09:04:00  84400  84400  84200  84200   122268\n",
+      "2024-07-18 09:05:00  84300  84400  84200  84400   152270\n",
+      "...                    ...    ...    ...    ...      ...\n",
+      "2024-07-18 15:26:00  86300  86300  86300  86300        0\n",
+      "2024-07-18 15:27:00  86300  86300  86300  86300        0\n",
+      "2024-07-18 15:28:00  86300  86300  86300  86300        0\n",
+      "2024-07-18 15:29:00  86300  86300  86300  86300        0\n",
+      "2024-07-18 15:30:00  86900  86900  86900  86900  3164272\n",
+      "\n",
+      "[390 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = real_broker.fetch_today_1m_ohlcv(\"005930\")\n",
+    "\n",
+    "df = pd.DataFrame(result['output2'])\n",
+    "dt = pd.to_datetime(df['stck_bsop_date'] + ' ' + df['stck_cntg_hour'], format=\"%Y%m%d %H%M%S\")\n",
+    "df.set_index(dt, inplace=True)\n",
+    "df = df[['stck_oprc', 'stck_hgpr', 'stck_lwpr', 'stck_prpr', 'cntg_vol']]\n",
+    "df.columns = ['open', 'high', 'low', 'close', 'volume']\n",
+    "df.index.name = \"datetime\"\n",
+    "df = df[::-1]\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
